@startuml

class InventoryManager {
    + main()
    + start()
}

class SceneManager {
    + scenes: HashMap<String, Scene>

    + load()
    + getScene(String name): Scene
}

class InventoryManagerController {
    - @FXML inventoryTable: TableView<InventoryItem>
    - @FXML valueTableColumn: TableColumn<InventoryItem, BigDecimal>
    - @FXML serialNumberTableColumn: TableColumn<InventoryItem, String>
    - @FXML nameTableColumn: TableColumn<InventoryItem, String>
    - @FXML searchBarTextField: TextField

    - sceneManager: SceneManager
    - listModel: InventoryListModel
    - items: ObservableList<InventoryItem>
    - tempList: ObservableList<InventoryItem>

    - readValue(ArrayList<String> fileItem, int index): BigDecimal
    - readSerialNumber(ArrayList<String> fileItem, int index): String
    - readString(ArrayList<String> fileItem, int index): String

    + InventoryManagerController(listModel, sceneManager)
    + getFoundEntries(listModel, tempList, String entry): ObservableList<InventoryItem>
    + @Override initialize(URL location, ResourceBundle resources)
    + @FXML addItemButtonClicked(ActionEvent actionEvent)
    + @FXML deleteItemButtonClicked(ActionEvent actionEvent)
    + @FXML editItemButtonClicked(ActionEvent actionEvent)
    + @FXML sortListButtonClicked(ActionEvent actionEvent)
    + @FXML saveAsMenuItemClicked(ActionEvent actionEvent)
    + @FXML searchButtonClicked(ActionEvent actionEvent)
    + @FXML resetButtonClicked(ActionEvent actionEvent)
    + @FXML openMenuItemClicked(ActionEvent actionEvent)
    + @FXML quitMenuItemClicked(ActionEvent actionEvent)
}

class InventoryListModel {
    + items: ObservableList<InventoryItem>

    + InventoryListModel()
    + InventoryListModel(items)
    + getItems(): ObservableList<InventoryItem>
}

class InventoryItem {
    - price: BigDecimal
    - serialNumber: String
    - name: String

    + InventoryItem(price, serialNumber, name)
    + getName(): String
    + setName(name)
    + getSerialNumber(): String
    + setSerialNumber(serialNumber)
    + getPrice(): BigDecimal
    + setPrice(price)
}

class AddItemController {
    - listModel: InventoryListModel
    - sceneManager: SceneManager

    - @FXML priceTextField: TextField
    - @FXML serialNumberTextField: TextField
    - @FXML nameTextField: TextField
    - @FXML errorLabel: Label

    - @FXML confirmButtonClicked((ActionEvent actionEvent)
    - printError(String prompt)
    - commitToList(String price, String serialNumber, String name)

    + AddItemController(listModel, sceneManager)
    + addToList(BigDecimal price, String serialNumber, String name)
    + inputIsValid(listModel, String price, String serialNumber, String name): int
}

class EditItemController {
    - listModel: InventoryListModel
    - selectedItem: InventoryItem
    - controller: InventoryManagerController

    - @FXML editPriceTextField: TextField
    - @FXML editSerialNumberTextField: TextField
    - @FXML editNameTextField: TextField
    - @FXML editErrorLabel: Label

    - @FXML confirmButtonClicked(ActionEvent actionEvent)
    - commitToList(String price, String serialNumber, String name)
    - inputIsValid(listModel, selectedItem, String price, String serialNumber, String name): int
    - printError(String prompt)

    + setData(controller, listModel, selectedItem)
    + commitEditItem(selectedItem, BigDecimal price, String serialNumber, String name)
}

class SortListController {
    - listModel: InventoryListModel
    - sceneManager: SceneManager

    - @FXML sortByValueButton: Button
    - @FXML sortBySerialNumberButton: Button
    - @FXML sortByNameButton: Button

    - @FXML sortByValueButtonClicked((ActionEvent actionEvent)
    - @FXML sortBySerialNumberButtonClicked((ActionEvent actionEvent)
    - @FXML sortByNameButtonClicked((ActionEvent actionEvent)

    + SortListController(listModel, sceneManager)
    + sortByValue(listModel)
    + sortBYSerialNumber(listModel)
    + sortByName(listModel)
}

class FileManager {
    + saveFile(listModel)
    + loadFile(listModel): ArrayList<String>

    + writeToText(String path, listModel)
    + writeToHTML(String path, listModel)
    + loadFromText(String path): ArrayList<String>
    + loadFromHTML(String path): ArrayList<String>
}

openjfx.org.Application <|-- InventoryManager
InventoryManager -- SceneManager
SceneManager -- InventoryManagerController
SceneManager -- AddItemController
SceneManager -- SortListController
EditItemController -- InventoryManagerController
InventoryManagerController o-- InventoryListModel
InventoryManagerController -- FileManager
AddItemController o-- InventoryListModel
SortListController o-- InventoryListModel
InventoryListModel *-- InventoryItem
@enduml